[build] Renamed package from events.d to events, can't use dot as a name separator in code.dlang.org (OMG)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "events.d",
+    "name": "events",
     "description": "Event Object Model",
     "copyright": "Copyright © 2013, 2014, Heapsource.com",
     "homepage": "https://github.com/heapsource/events.d",
