[build] Added sourcePaths additional to importPaths in package.json to allow usage as source or static lib

--- a/package.json
+++ b/package.json
@@ -6,5 +6,6 @@
     "authors": ["thepumpkin1979", "heapsource"],
     "license": "MIT",
     "targetType": "library",
-    "importPaths": ["lib"]
+    "importPaths": ["lib"],
+    "sourcePaths": ["lib"]
 }
